# yasb

./: .gitignore  LICENSE  README.md  pylama.ini  pyproject.toml
src/: config.yaml  main.py  settings.py
src/core/: bar.py  bar_manager.py  config.py  event_enums.py  event_service.py  log.py  tray.py  watcher.py
src/core/utils/: alert_dialog.py  utilities.py  widget_builder.py
src/core/utils/komorebi/: client.py  event_listener.py
src/core/utils/win32/: active_window_border.py  app_bar.py  event_listener.py  media_control.py  utilities.py  windows.py
src/core/validation/: bar.py  config.py
src/core/validation/widgets/: example.py
src/core/validation/widgets/komorebi/: active_layout.py  workspaces.py
src/core/validation/widgets/yasb/: active_window.py  battery.py  clock.py  cpu.py  custom.py  memory.py  traffic.py  wifi.py
src/core/widgets/: base.py  example.py
src/core/widgets/komorebi/: active_layout.py  workspaces.py
src/core/widgets/yasb/: active_window.py  battery.py  clock.py  cpu.py  custom.py  memory.py  traffic.py  wifi.py
