[tool.poetry]
name = "yasb"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Tnixc <tnixxc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
blurwindow = "^1.2.1"
cerberus = "^1.3.5"
cssutils = "^2.10.2"
humanize = "^4.9.0"
psutil = "^5.9.8"
pyqt6 = "^6.7.0"
pytz = "^2024.1"
pywin32 = "^306"
pyyaml = "^6.0.1"
tzlocal = "^5.2"
watchdog = "^4.0.0"
winsdk = "^1.0.0b10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
